Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35456

Qt 5 crashes when creating a QSound if pulseaudio is not running

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.1
    • 5.1.1
    • Multimedia
    • None
    • Linux
    • 34f253e19d5687ccc383c52b5baa6d37ac9d4571

    Description

      In qsoundeffect_pulse_p.cpp, on line 175:
      pa_context_set_state_callback(m_context, context_state_callback, this);

      m_context may be NULL which causes libpulse to crash with an assertion. Note that m_context is actually checked for NULL on the next line!

      Attachments

        For Gerrit Dashboard: QTBUG-35456
        # Subject Branch Project Status CR V

        Activity

          People

            ylopes Yoann Lopes
            jeberger J. Berger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes